@@ -791,6 +791,7 @@ following image formats are supported:
 @item Fraps FPS1             @tab     @tab  X @tab
 @item CamStudio              @tab     @tab  X @tab fourcc: CSCD
 @item American Laser Games Video  @tab    @tab X @tab Used in games like Mad Dog McCree
+@item ZMBV                   @tab     @tab  X @tab
 @end multitable
 
 @code{X} means that encoding (resp. decoding) is supported.
